[package]
name = "ptrace"
version = "0.1.2"
description = "Rust bindings for the POSIX ptrace API"
repository = "http://github.com/LastOne817/rust-ptrace"
license = "MIT"
readme = "README.md"

[lib]
name = "ptrace"

[dependencies]
bitflags = "0.1"
posix-ipc = {version = "0.0", git = "https://github.com/LastOne817/rust-posix-ipc.git"}
errno = "*"
libc = "*"
